--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             app:cardCornerRadius="8dp">
 
 
-            <com.smarteist.autoimageslider.SliderView
+            <com.smarteist.autoimageslider.SliderInstagramIndicatorView
                 android:id="@+id/imageSlider"
                 android:layout_width="match_parent"
                 android:layout_height="300dp" />
